some fixes anf new imports for the tdwg workshop